--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -119,8 +119,8 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Default</span>
+                <img class="img-profile rounded-circle" src="/img/cat.jpg">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -131,6 +131,10 @@
                 <a class="dropdown-item" href="/tickets">
                   <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Mis tickets
+                </a>
+                <a class="dropdown-item" href="/createEvent">
+                  <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Crear evento
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
