--- a/src/main/resources/templates/events_template.html
+++ b/src/main/resources/templates/events_template.html
@@ -6,13 +6,13 @@
 	{{#events}}
 	<div class="card shadow mb-4">
 		<!-- Card Header - Accordion -->
-		<a href="#collapse{{-index}}" class="d-block card-header py-3"
-			data-toggle="collapse" role="button" aria-expanded="true"
+		<a href="#collapse{{-index}}" class="d-block card-header py-3 collapsed"
+			data-toggle="collapse" role="button" aria-expanded="false"
 			aria-controls="collapseCardExample">
 			<h4 class="m-0 font-weight-bold text-primary">{{name}}</h4>
 		</a>
 		<!-- Card Content - Collapse -->
-		<div class="collapse show" id="collapse{{-index}}" style="">
+		<div class="collapse" id="collapse{{-index}}" style="">
 			<div class="card-body">
 				<h4>
 					<strong>Creador del evento: </strong>{{user.username}}
@@ -49,7 +49,38 @@
 			</div>
 		</div>
 	</div>
+	{{#prePageFlag}}
+	<div class="row">
+		<div class="col-2 text-left">
+		<a href="/events/{{prePage}}" class="btn btn-primary btn-circle btn-lg">
+                    <i class="fas fa-angle-left"></i>
+                  </a>
+		</div>
+		<div class="col-2 offset-8 text-right">
+		<a href="/events/{{nextPage}}" class="btn btn-primary btn-circle btn-lg">
+                    <i class="fas fa-angle-right"></i>
+                  </a>
+		</div> 
+	</div>
+	{{/prePageFlag}}
+	{{^prePageFlag}}
+	<div class="row">
+		<div class="col-2 offset-10 text-right">
+		<a href="/events/{{nextPage}}" class="btn btn-primary btn-circle btn-lg">
+                    <i class="fas fa-angle-right"></i>
+                  </a>
+		</div> 
+	</div>
+	{{/prePageFlag}}
 	{{/events}}
+	
+	{{^events}}
+	<h4>No hay eventos próximos</h4>
+	{{/events}}
+	
+	
+	
+	
 </div>
 <!-- /.container-fluid -->
 
