--- a/src/main/resources/templates/user_template.html
+++ b/src/main/resources/templates/user_template.html
@@ -19,7 +19,7 @@
 					{{#cards}}
 					<div class="row">
 						<div class="col-8">
-							{{cardNumber}}
+							{{displayNumber}}
 						</div>
 						<div class="col-4">
 						<a href="/" class="col-12 d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm" style="">
