Mostrar mis eventos
Ahora hay disponible una seccion que muestra los eventos de un usuario, es decir, los que podrá borrar y añadir tickets

--- a/src/main/resources/templates/createEvent_template.html
+++ b/src/main/resources/templates/createEvent_template.html
@@ -21,8 +21,8 @@
 	             </div>
 	             
 	             <div class="col-7">
-	            		<p>Descripci髇 del evento</p>
-	            		<textarea name='eventDesc' class="form-control form-control-user" rows=5 style="resize: none"placeholder="Descripci髇 del evento" ></textarea>
+	            		<p>Descripci贸n del evento</p>
+	            		<textarea name='eventDesc' class="form-control form-control-user" rows=5 style="resize: none"placeholder="Descripci贸n del evento" ></textarea>
 	             </div>
 	             
 	             <div class="col-6">
@@ -36,12 +36,12 @@
 	             </div>
 	             
 	              <div class="col-7">
-	            		<p>Descripci髇 del ticket</p>
-	            		<textarea name='ticketDesc' class="form-control form-control-user" rows=5 style="resize: none"placeholder="Descripci髇 del ticket" ></textarea>
+	            		<p>Descripci贸n del ticket</p>
+	            		<textarea name='ticketDesc' class="form-control form-control-user" rows=5 style="resize: none"placeholder="Descripci贸n del ticket" ></textarea>
 	             </div>
 	             	
 	             <div class="col-4 offset-4" style="padding-top: 15px">
-	             	<input type="submit" value='Enviar' class="btn btn-primary btn-user btn-block"/>
+	             	<input type="submit" value='Crear' class="btn btn-primary btn-user btn-block"/>
 	             </div>
 	            </div>	
 	            </form>
