--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -63,6 +63,9 @@
       	<a class="nav-link" href="/tickets">
           <i class="fas fa-ticket-alt"></i>
           <span>Mis tickets</span></a>
+        <a class="nav-link" href="/myEvents">
+          <i class="fas fa-calendar-check"></i>
+          <span>Mis eventos</span></a>
         <a class="nav-link" href="/createEvent">
           <i class="fas fa-calendar-plus"></i>
           <span>Crear evento</span></a>
@@ -131,6 +134,10 @@
                 <a class="dropdown-item" href="/tickets">
                   <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Mis tickets
+                </a>
+                <a class="dropdown-item" href="/myEvents">
+                  <i class="fas fa-calendar-check fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Mis eventos
                 </a>
                 <a class="dropdown-item" href="/createEvent">
                   <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
