Eliminar eventos y añadir tickets
Ya es posible eliminar eventos y añadir tickets en la ventana de "Mis eventos", es decir, si has creado el evento. También hay mejoras visuales y errores personalizados

--- a/src/main/resources/templates/myEvents_template.html
+++ b/src/main/resources/templates/myEvents_template.html
@@ -19,7 +19,7 @@
 					<strong>Creador del evento: </strong>{{user.username}}
 				</h4>
 				<div class="col-6 col-md-2 offset-md-4 text-right">
-					<a href="/deletEvent/{{id}}" class="btn btn-danger btn-icon-split">
+					<a href="/deleteEvent/{{id}}" class="btn btn-danger btn-icon-split">
                     <span class="icon text-white-50">
                       <i class="fas fa-trash"></i>
                     </span>
