--- a/src/main/resources/templates/addCard_template.html
+++ b/src/main/resources/templates/addCard_template.html
@@ -7,8 +7,8 @@
 	  <div class="col-12">
 	  	<div class="card shadow mb-4">
 	        <!-- Card Header - Accordion -->
-	        <a href="#collapseCardExample" class="d-block card-header py-3" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">
-	          <h6 class="m-0 font-weight-bold text-primary">Añade una tarjeta</h6>
+	        <a href="#collapseCardAddCard" class="d-block card-header py-3" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">
+	          <h6 class="m-0 font-weight-bold text-primary">AÃ±ade una tarjeta</h6>
 	        </a>
 	        <!-- Card Content - Collapse -->
 	        <div class="collapse show" id="collapseCardAddCard" style="">
@@ -16,13 +16,13 @@
 	            <form method='post' action='/addCard'>
 	            <div class="row">
 	            	<div class="col-12">
-	            		<p>Número de tarjeta:</p>
-	            		<input type='text' name='cardNumber' class="form-control form-control-user" placeholder="Número de tarjeta"/>
+	            		<p>NÃºmero de tarjeta:</p>
+	            		<input type='text' name='cardNumber' class="form-control form-control-user" placeholder="NÃºmero de tarjeta"/>
 	             </div>
 	             
 	             <div class="col-12">
-	            		<p>Nombre del dueño:</p>
-	            		<input type='text' name='ownerName' class="form-control form-control-user" placeholder="Nombre del dueño"/>
+	            		<p>Nombre del dueÃ±o:</p>
+	            		<input type='text' name='ownerName' class="form-control form-control-user" placeholder="Nombre del dueÃ±o"/>
 	             </div>
 	             
 	             <div class="col-12">
