--- a/src/main/resources/templates/addTicket_template.html
+++ b/src/main/resources/templates/addTicket_template.html
@@ -7,32 +7,16 @@
 	<div class="col-12">
 		<div class="card shadow mb-4">
 			<!-- Card Header - Accordion -->
-			<a href="#collapseCardCreateEvent" class="d-block card-header py-3"
+			<a href="#collapseCardAddTickets" class="d-block card-header py-3"
 				data-toggle="collapse" role="button" aria-expanded="true"
 				aria-controls="collapseCardExample">
-				<h6 class="m-0 font-weight-bold text-primary">Crea tu evento</h6>
+				<h6 class="m-0 font-weight-bold text-primary">Añade un Ticket</h6>
 			</a>
 			<!-- Card Content - Collapse -->
-			<div class="collapse show" id="collapseCardCreateEvent" style="">
+			<div class="collapse show" id="collapseCardAddTickets" style="">
 				<div class="card-body">
-					<form method='post' action='/createEvent'>
+					<form method='post' action='/addTicket/{{eventId}}'>
 						<div class="row">
-							<div class="col-6">
-								<h6>Nombre del evento</h6>
-								<input type='text' name='eventName'
-									class="form-control form-control-user"
-									placeholder="Nombre del evento"
-									/>
-							</div>
-							
-
-							<div class="col-7">
-								<h6>Descripción del evento</h6>
-								<textarea name='eventDesc'
-									class="form-control form-control-user" rows=5
-									style="resize: none" placeholder="Descripción del evento"></textarea>
-							</div>
-							
 							<div class="col-6">
 								<h6>Nombre del Ticket</h6>
 								<input type='text' name='ticketName'
@@ -65,7 +49,7 @@
 
 
 							<div class="col-4 offset-4" style="padding-top: 15px">
-								<input type="submit" value='Crear'
+								<input type="submit" value='Añadir Ticket'
 									class="btn btn-primary btn-user btn-block" />
 							</div>
 						</div>
