Creada vista para comprar tickets
Creada la vista para la compra de tickets y añadida la funcionalidad dentro de esta.

--- a/src/main/resources/templates/events_template.html
+++ b/src/main/resources/templates/events_template.html
@@ -46,6 +46,10 @@
 				</div>
 				{{/tickets}}
 				</div>
+				<hr>
+				<a href='/buy/{{id}}' class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" style="">
+					<i class="fas fa-credit-card"></i>&emsp;Comprar
+				</a>
 			</div>
 		</div>
 	</div>
