Mostrar mis compras
Se ha añadido la funcionalidad de poder ver las compras que has realizado. También se han cambiado algunos templates y las estructura de la web

--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -44,6 +44,9 @@
         <a class="nav-link" href="/">
           <i class="fas fa-home"></i>
           <span>Inicio</span></a>
+          <a class="nav-link" href="/register">
+          <i class="fas fa-user-plus"></i>
+          <span>Registrarse</span></a>
       </li>
 
       <!-- Divider -->
@@ -60,9 +63,9 @@
         <a class="nav-link" href="/user">
           <i class="fas fa-user"></i>
           <span>Perfil</span></a>
-      	<a class="nav-link" href="/tickets">
-          <i class="fas fa-ticket-alt"></i>
-          <span>Mis tickets</span></a>
+      	<a class="nav-link" href="/orders">
+          <i class="fas fa-shopping-cart"></i>
+          <span>Mis compras</span></a>
         <a class="nav-link" href="/myEvents">
           <i class="fas fa-calendar-check"></i>
           <span>Mis eventos</span></a>
@@ -71,22 +74,6 @@
           <span>Crear evento</span></a>
       </li>
       
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Eventos
-      </div>
-
-
-      <!-- Nav Item - Events -->
-      <li class="nav-item">
-        <a class="nav-link" href="/events">
-          <i class="fas fa-calendar-week"></i>
-          <span>Eventos</span></a>
-      </li>
 
 
       <!-- Divider -->
@@ -131,16 +118,16 @@
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Perfil
                 </a>
-                <a class="dropdown-item" href="/tickets">
-                  <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Mis tickets
+                <a class="dropdown-item" href="/orders">
+                  <i class="fas fa-shopping-cart fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Mis compras
                 </a>
                 <a class="dropdown-item" href="/myEvents">
                   <i class="fas fa-calendar-check fa-sm fa-fw mr-2 text-gray-400"></i>
                   Mis eventos
                 </a>
                 <a class="dropdown-item" href="/createEvent">
-                  <i class="fas fa-ticket-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  <i class="fas fa-calendar-plus fa-sm fa-fw mr-2 text-gray-400"></i>
                   Crear evento
                 </a>
                 <div class="dropdown-divider"></div>
