--- a/src/main/resources/templates/buy_template.html
+++ b/src/main/resources/templates/buy_template.html
@@ -15,11 +15,11 @@
 			<!-- Card Content - Collapse -->
 			<div class="collapse show" id="collapseCardAddCard" style="">
 				<div class="card-body">
-					<form method='post' action='/pay' id="paymentform">
+					<form method='post' action='/pay'>
 						<div class="row">
 							<div class="col-12">
 								<p>Tarjeta a usar:</p>
-								<select name="selectedCard" class="form-control form-control-user" form="paymentform">
+								<select name="selectedCard" class="form-control form-control-user">
 									{{#cards}}
 									<option value="{{cardNumber}}">{{displayNumber}}</option>
 									{{/cards}}
@@ -144,8 +144,7 @@
 
 						<div class="row">
 							<div class="col-4 offset-4" style="padding-top: 15px">
-								<input type="submit" value='Adquirir'
-									class="btn btn-primary btn-user btn-block" />
+								<input type="submit" value='Adquirir' class="btn btn-primary btn-user btn-block" />
 							</div>
 						</div>
 					</form>
