--- a/src/main/resources/templates/orders_template.html
+++ b/src/main/resources/templates/orders_template.html
@@ -78,7 +78,6 @@
 						<strong>Nombres de cada Ticket: </strong>
 				</h4>
 				<div class=row">
-					{{#names}}
 					<div class="col-4">
 						<div class="card border-left-primary shadow h-100 py-2">
 							<div class="card-header">
@@ -88,7 +87,7 @@
 								<div class="row no-gutters align-items-center">
 									<div class="col mr-2">
 										<div class="h5 mb-0 font-weight-bold text-gray-800">Nombre:
-											{{.}}</div>
+										</div>
 									</div>
 									<div class="col-auto">
 										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
@@ -97,7 +96,6 @@
 							</div>
 						</div>
 					</div>
-					{{/names}}
 				</div>
 				
 			</div>
