--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -130,12 +130,12 @@
                   <i class="fas fa-calendar-plus fa-sm fa-fw mr-2 text-gray-400"></i>
                   Crear evento
                 </a>
-                <div class="dropdown-divider"></div>
+                <!--<div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Cerrar Sesión
                 </a>
-              </div>
+              </div>-->
             </li>
 
           </ul>
