Mostrar tarjetas de usuarios específicos
Se pueden mostrar tarjetas de usuarios específicos mediante URL

--- a/src/main/resources/templates/orders_template.html
+++ b/src/main/resources/templates/orders_template.html
@@ -93,7 +93,7 @@
 											{{person1}}</div>
 									</div>
 									<div class="col-auto">
-										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+										<i class="fas fa-user fa-2x text-gray-300"></i>
 									</div>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 											{{person2}}</div>
 									</div>
 									<div class="col-auto">
-										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+										<i class="fas fa-user fa-2x text-gray-300"></i>
 									</div>
 								</div>
 							</div>
@@ -131,7 +131,7 @@
 											{{person3}}</div>
 									</div>
 									<div class="col-auto">
-										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+										<i class="fas fa-user fa-2x text-gray-300"></i>
 									</div>
 								</div>
 							</div>
@@ -150,7 +150,7 @@
 											{{person4}}</div>
 									</div>
 									<div class="col-auto">
-										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+										<i class="fas fa-user fa-2x text-gray-300"></i>
 									</div>
 								</div>
 							</div>
@@ -169,7 +169,7 @@
 											{{person5}}</div>
 									</div>
 									<div class="col-auto">
-										<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
+										<i class="fas fa-user fa-2x text-gray-300"></i>
 									</div>
 								</div>
 							</div>
