--- a/src/main/resources/templates/buy_template.html
+++ b/src/main/resources/templates/buy_template.html
@@ -28,111 +28,89 @@
 						</div>
 
 						<hr>
-
+						
 						<div class="row">
 							<div class="col-12">
-								<p>Tickets:</p>
-							</div>
-							{{#tickets}}
-							<a class="col-4 ticket-button" data-ticketid="{{id}}" data-ticketname="{{name}}" data-ticketprice="{{price}}" style="cursor: pointer">
-								<div class="card border-left-primary shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div
-													class="text-xs font-weight-bold text-primary text-uppercase mb-1">{{name}}</div>
-												<div class="h5 mb-0 font-weight-bold text-gray-800">Precio:
-													{{price}} €</div>
-											</div>
-											<div class="col-auto">
-												<i class="fas fa-money-bill-alt fa-2x text-gray-300"></i>
-											</div>
-										</div>
-									</div>
-								</div>
-							</a>
-							{{/tickets}}
-						</div>
-						
-						<hr>
-						
-						<div class="row" id="ticket-0" style="display: none">
-							<div class="col-12">
-								<p>[Ticket] Nombre de la persona:</p>
+								<p>Nombre de la persona:</p>
 							</div>
 							<div class="col-8">
-	            				<input type='text' name='person_0' class="form-control form-control-user inputname" placeholder="Nombre"/>
-	            				<input type='number' name='price_0' class="inputprice" hidden=""/>
-	            				<input type='number' name='tickettype_0' class="inputtype" hidden=""/>
+								<input type='text' name='person_0' class="form-control form-control-user inputname" placeholder="Nombre"/>
 							</div>
 							<div class="col-4">
-								<div class="btn btn-danger btn-user btn-block delete-ticket" style="cursor: pointer" data-ticketid="0">
-									Eliminar
-								</div>
+								<select name="tickettype_0" class="form-control form-control-user">
+									<option value="none">Ninguna</option>
+									{{#tickets}}
+									<option value="{{id}}">{{name}}</option>
+									{{/tickets}}
+								</select>
 							</div>
 						</div>
 						
-						<div class="row" id="ticket-1" style="display: none">
+						<div class="row">
 							<div class="col-12">
-								<p>[Ticket] Nombre de la persona:</p>
+								<p>Nombre de la persona:</p>
 							</div>
 							<div class="col-8">
-	            				<input type='text' name='person_1' class="form-control form-control-user inputname" placeholder="Nombre"/>
-	            				<input type='number' name='price_1' class="inputprice" hidden=""/>
-	            				<input type='number' name='tickettype_1' class="inputtype" hidden=""/>
+								<input type='text' name='person_1' class="form-control form-control-user inputname" placeholder="Nombre"/>
 							</div>
 							<div class="col-4">
-								<div class="btn btn-danger btn-user btn-block delete-ticket" style="cursor: pointer" data-ticketid="1">
-									Eliminar
-								</div>
+								<select name="tickettype_1" class="form-control form-control-user">
+									<option value="none">Ninguna</option>
+									{{#tickets}}
+									<option value="{{id}}">{{name}}</option>
+									{{/tickets}}
+								</select>
 							</div>
 						</div>
 						
-						<div class="row" id="ticket-2" style="display: none">
+						<div class="row">
 							<div class="col-12">
-								<p>[Ticket] Nombre de la persona:</p>
+								<p>Nombre de la persona:</p>
 							</div>
 							<div class="col-8">
-	            				<input type='text' name='person_2' class="form-control form-control-user inputname" placeholder="Nombre"/>
-	            				<input type='number' name='price_2' class="inputprice" hidden=""/>
-	            				<input type='number' name='tickettype_2' class="inputtype" hidden=""/>
+								<input type='text' name='person_2' class="form-control form-control-user inputname" placeholder="Nombre"/>
 							</div>
 							<div class="col-4">
-								<div class="btn btn-danger btn-user btn-block delete-ticket" style="cursor: pointer" data-ticketid="2">
-									Eliminar
-								</div>
+								<select name="tickettype_2" class="form-control form-control-user">
+									<option value="none">Ninguna</option>
+									{{#tickets}}
+									<option value="{{id}}">{{name}}</option>
+									{{/tickets}}
+								</select>
 							</div>
 						</div>
 						
-						<div class="row" id="ticket-3" style="display: none">
+						<div class="row">
 							<div class="col-12">
-								<p>[Ticket] Nombre de la persona:</p>
+								<p>Nombre de la persona:</p>
 							</div>
 							<div class="col-8">
-	            				<input type='text' name='person_3' class="form-control form-control-user inputname" placeholder="Nombre"/>
-	            				<input type='number' name='price_3' class="inputprice" hidden=""/>
-	            				<input type='number' name='tickettype_3' class="inputtype" hidden=""/>
+								<input type='text' name='person_3' class="form-control form-control-user inputname" placeholder="Nombre"/>
 							</div>
 							<div class="col-4">
-								<div class="btn btn-danger btn-user btn-block delete-ticket" style="cursor: pointer" data-ticketid="3">
-									Eliminar
-								</div>
+								<select name="tickettype_3" class="form-control form-control-user">
+									<option value="none">Ninguna</option>
+									{{#tickets}}
+									<option value="{{id}}">{{name}}</option>
+									{{/tickets}}
+								</select>
 							</div>
 						</div>
 						
-						<div class="row" id="ticket-4" style="display: none">
+						<div class="row">
 							<div class="col-12">
-								<p>[Ticket] Nombre de la persona:</p>
+								<p>Nombre de la persona:</p>
 							</div>
 							<div class="col-8">
-	            				<input type='text' name='person_4' class="form-control form-control-user inputname" placeholder="Nombre"/>
-	            				<input type='number' name='price_4' class="inputprice" hidden=""/>
-	            				<input type='number' name='tickettype_4' class="inputtype" hidden=""/>
+								<input type='text' name='person_4' class="form-control form-control-user inputname" placeholder="Nombre"/>
 							</div>
 							<div class="col-4">
-								<div class="btn btn-danger btn-user btn-block delete-ticket" style="cursor: pointer" data-ticketid="4">
-									Eliminar
-								</div>
+								<select name="tickettype_4" class="form-control form-control-user">
+									<option value="none">Ninguna</option>
+									{{#tickets}}
+									<option value="{{id}}">{{name}}</option>
+									{{/tickets}}
+								</select>
 							</div>
 						</div>
 
@@ -157,45 +135,3 @@
 <!-- /.container-fluid -->
 
 {{> includes/footer}}
-
-<script>
-
-	$(".ticket-button").click(function() {
-		var ticketid = $(this).data("ticketid");
-		for (i=0; i<5; i++) {
-			var object = $("#ticket-"+i);
-			if(object.is(":hidden")) {
-				object.show();
-				var text = object.find("p")
-				text.html("[" + $(this).data("ticketname") + "] Nombre de la persona:");
-				var price = object.find(".inputprice");
-				price.val($(this).data("ticketprice"));
-				var type = object.find(".inputtype");
-				type.val(ticketid);
-				break;
-			}
-		}
-		updatePrice();
-	});
-	
-	$(".delete-ticket").click(function() {
-		var ticketid = $(this).data("ticketid");
-		var object = $("#ticket-"+ticketid);
-		object.hide();
-		object.find(".inputname").val("");
-		object.find(".inputprice").val(0);
-		object.find(".inputtype").val(0);
-		updatePrice();
-	});
-	
-	function updatePrice() {
-		var totalprice = 0;
-		$(".inputprice").each(function( index ) {
-			var money = parseFloat($(this).val())
-			if (!isNaN(money))
-				totalprice += money
-		});
-		$("#totalprice").html("Precio Total = " + totalprice.toFixed(2) + " &euro;");
-	}
-	
-</script>
