--- a/PracticaDaD/src/main/resources/templates/login_template.html
+++ b/PracticaDaD/src/main/resources/templates/login_template.html
@@ -41,12 +41,13 @@
                   </div>
                   <form class="user" method="post" action="/login">
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-user" aria-describedby="emailHelp" placeholder="Usuario">
+                      <input name="username" type="text" class="form-control form-control-user" aria-describedby="emailHelp" placeholder="Usuario">
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control form-control-user" placeholder="Contraseña">
+                      <input name="password" type="password" class="form-control form-control-user" placeholder="Contraseña">
                     </div>
                     <input type="submit" value='Iniciar sesión' class="btn btn-primary btn-user btn-block">
+                    <input type="hidden" name="_csrf" value="{{token}}"/>
                     <hr>
                     <div class="text-center">
                     	<h1>Tic <sup>Tak</sup> Ticket</h1>
