Adaptado reconocimiento de usuario
Ahora las páginas saben reconocer el usuario actual en lugar de usar el usuario por defecto o tomarlo de la url.

--- a/PracticaDaD/src/main/resources/templates/includes/header.html
+++ b/PracticaDaD/src/main/resources/templates/includes/header.html
@@ -104,12 +104,14 @@
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
 
+			{{#loggedUser}}
+
             <div class="topbar-divider d-none d-sm-block"></div>
 
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Default</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{loggedUser}}</span>
                 <img class="img-profile rounded-circle" src="/img/cuteCat.png">
               </a>
               <!-- Dropdown - User Information -->
@@ -137,6 +139,8 @@
                 </a>
               </div>-->
             </li>
+            
+            {{/loggedUser}}
 
           </ul>
 
