Añadido campo de correo electronico y arreglos
Se ha añadido un campo de correo electrónico (para mandar los tickets más adelante) y arreglos varios

--- a/PracticaDaD/src/main/resources/templates/buy_template.html
+++ b/PracticaDaD/src/main/resources/templates/buy_template.html
@@ -119,6 +119,15 @@
 						<p id="totalprice">Precio Total = 0.00 &euro;</p>
 						
 						<hr>
+						
+						<div class="row">
+							<div class="col-12">
+								<p>Correo electr&oacute;nico (Opcional):</p>
+								<input type='text' name='email' class="form-control form-control-user inputname" placeholder="Correo electr&oacute;nico"/>
+							</div>
+						</div>
+						
+						<hr>
 
 						<div class="row">
 							<div class="col-4 offset-4" style="padding-top: 15px">
