--- a/PracticaDaD/src/main/resources/templates/includes/header.html
+++ b/PracticaDaD/src/main/resources/templates/includes/header.html
@@ -44,9 +44,14 @@
         <a class="nav-link" href="/">
           <i class="fas fa-home"></i>
           <span>Inicio</span></a>
+          {{^loggedUser}}
+          <a class="nav-link" href="/login">
+          <i class="fas fa-sign-in-alt"></i>
+          <span>Login</span></a>
           <a class="nav-link" href="/register">
           <i class="fas fa-user-plus"></i>
           <span>Registrarse</span></a>
+          {{/loggedUser}}
       </li>
 
       <!-- Divider -->
