Ahora el Mustache no se queja
Arreglo en la pantalla de errores para que Mustache deje de llorar cuando no sabe el numero del error.

--- a/PracticaDaD/src/main/resources/templates/includes/header.html
+++ b/PracticaDaD/src/main/resources/templates/includes/header.html
@@ -9,7 +9,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  {{#page_title}}
+  <title>Tic Tak Ticket | {{page_title}}</title>
+  {{/page_title}}
+  {{^page_title}}
   <title>Tic Tak Ticket</title>
+  {{/page_title}}
 
   <!-- Custom fonts for this template-->
   <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
